
- fixed a bug where the undo/redo menu item title would not display the correct action name
- fixed a bug in the Find dialog where some pattern would cause an exception (didn't quote in the regex)
- fixed a bug which would prevent drag and drop of rules to work on Windows
- fixed a bug where not all messages would be displayed in the console (added group "idle")

Version 1.0ea4 - 10/22/05

- find and replace
- ideas actions
- rule folding (experimental)
- duplicates rules are now underlined in blue
- undefined rules are now underlined in red
- rules can now be grouped and displayed in a tree view
- auto-indentation (enabled also on ':', '|' and ';' characters)
- show decision DFA (using DOT tool defined in the preferences)
- replace literal with token label
- remove left recursion (one or all)
- insert rule from template

- new analysis column displaying the location and kind of errors and warnings
- support Perforce SCM commands
- console moved from Window menu to project's window
- improved console with events list
- refactored the main menu bar
- remove collapse/expand actions - will reintroduce that later on
- improved drag and drop visual feedback (can now drop below or above a rule)
- improved auto-completion (context sensitive)
- removed duplicate names in auto-completion

- current line is now highlighted
- display line and column number in bottom status bar
- HOME/END key move to beginning/end of line
- can now navigate backward/forward
- rules have now icon in the tree view
- go to rule now move the cursor to the beginning of the rule instead of selecting it
- new toolbar

- prefs: auto-save every n minutes
- prefs: syntax coloring parser delay
- prefs: can now specify the colors of each type of token in the debugger input text panel
- prefs: can specify rule folding (experimental yet)

- include a pre-version of ANTLR 3.0ea6

- fixed a bug where a new document created on Windows would not be correctly colorized