@@ -1,6 +1,3 @@
-- Windows: check build & debug on Windows/Linux (remove then the System.out.println in DebuggerLocal)
-- Windows: prefs: why is the window resized when applying the prefs
-- Windows: error in parser should be detected in the debugger (see "HELO" with smtp.g)
 
 - contextual menus on rules to group using selected rules (do not rely on text selection)
 - ideas: undefined rule: rename rule, delete token
