@@ -36,6 +36,7 @@ import java.awt.*;
 public interface EditorProvider {
     public void changeDone();
     public String getText();
+    public String getFilePath();
     public String getFileName();
     public Container getWindowContainer();
 }
